--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -18,12 +18,13 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
+    "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-refresh": "^0.4.7",
     "globals": "^15.9.0",
+    "typescript": "^5.6.2",
     "vite": "^5.3.4"
   }
 }
